--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,7 @@
 
 * {
     font-family: "Roboto", sans-serif;
+    box-sizing: border-box;
 }
 
 .main-header {
@@ -17,6 +18,7 @@
     position:fixed;
     top:0;
     z-index:100;
+    width:100%;
 }
 
 .logo {
