Se arreglo mensaje de vista  de pedido

--- a/views/pedido.html
+++ b/views/pedido.html
@@ -5,8 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedido</title>
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+        rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
-    <h1>HOLAAA</h1>
+    <header class="main-header">
+        <div class="main-header-top-bar">
+            <img
+                class="logo"
+                src="/images/logo-mercado-liebre.svg"
+                alt="Logo"
+            />
+            <h2 class="copy-header">
+                <i class="fas fa-hand-holding-usd"></i>
+                Compra en cuotas y sin tarjetas de crédito
+            </h2>
+        </div>
+        <a href="#" class="hamburger-btn">
+            <i class="fas fa-bars"></i>
+        </a>
+        <nav class="main-navbar">
+            <ul class="left-navbar">
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Tiendas Oficiales</a></li>
+                <li><a href="#">Vender</a></li>
+                <li><a href="#">Ayuda</a></li>
+            </ul>
+            <ul class="right-navbar">
+                <li>
+                    <a href="#">Crea tu cuenta <i class="fas fa-id-card"></i></a>
+                </li>
+                <li>
+                    <a href="#">Ingresa <i class="fas fa-sign-in-alt"></i></a>
+                </li>
+                <li>
+                    <a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="pedido">
+        <h1>Su pedido ha sido procesado </h1>
+        <i class="fas fa-thumbs-up" style="color:green"></i>
+    </main>
+
+    <footer>
+        <section>
+            <h4>Pagá con tarjeta o en efectivo</h4>
+            <p>
+                Con Mercado Liebre Cash, tenés cuotas sin interés con
+                tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!
+            </p>
+        </section>
+        <section>
+            <h4>Envío gratis desde $ 2.500</h4>
+            <p>
+                Solo por estar registrad@ en Mercado Liebre tenés envíos
+                gratis en miles de productos. Es un beneficio de Mercado
+                Puntos.
+            </p>
+        </section>
+        <section>
+            <h4>Seguridad, de principio a fin</h4>
+            <p>
+                ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que
+                no puedas hacer, porque estás siempre protegid@.
+            </p>
+        </section>
+        <section>
+            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+        </section>
+    </footer>
 </body>
 </html>
