--- a/views/home.html
+++ b/views/home.html
@@ -151,8 +151,9 @@
         
     </div>
 
-    <footer class="container">
+    <footer>
         <section>
+            <i class="fas fa-credit-card"></i>
             <h4>Pagá con tarjeta o en efectivo</h4>
             <p>
                 Con Mercado Liebre Cash, tenés cuotas sin interés con
@@ -160,6 +161,7 @@
             </p>
         </section>
         <section>
+            <i class="fas fa-gift"></i>
             <h4>Envío gratis desde $ 2.500</h4>
             <p>
                 Solo por estar registrad@ en Mercado Liebre tenés envíos
@@ -168,13 +170,14 @@
             </p>
         </section>
         <section>
+            <i class="fas fa-user-shield"></i>
             <h4>Seguridad, de principio a fin</h4>
             <p>
                 ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que
                 no puedas hacer, porque estás siempre protegid@.
             </p>
         </section>
-        <section>
+        <section class="copyright">
             <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
     </footer>
