--- a/views/pedido.html
+++ b/views/pedido.html
@@ -54,13 +54,13 @@
         </nav>
     </header>
 
-    <main class="pedido">
-        <h1>Su pedido ha sido procesado </h1>
-        <i class="fas fa-thumbs-up" style="color:green"></i>
+    <main class="pedido container">
+        <h1>Su pedido ha sido procesado <i class="fas fa-thumbs-up" style="color:green"></i></h1>
     </main>
 
     <footer>
         <section>
+            <i class="fas fa-credit-card"></i>
             <h4>Pagá con tarjeta o en efectivo</h4>
             <p>
                 Con Mercado Liebre Cash, tenés cuotas sin interés con
@@ -68,6 +68,7 @@
             </p>
         </section>
         <section>
+            <i class="fas fa-gift"></i>
             <h4>Envío gratis desde $ 2.500</h4>
             <p>
                 Solo por estar registrad@ en Mercado Liebre tenés envíos
@@ -76,13 +77,14 @@
             </p>
         </section>
         <section>
+            <i class="fas fa-user-shield"></i>
             <h4>Seguridad, de principio a fin</h4>
             <p>
                 ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que
                 no puedas hacer, porque estás siempre protegid@.
             </p>
         </section>
-        <section>
+        <section class="copyright">
             <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
     </footer>
