--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -235,21 +235,29 @@ h3 {
 }
 
 footer{
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
     padding: 1rem;
 }
 
-footer i {
+footer .info {
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+footer .info article {
+    max-width: 320px;
+}
+
+footer .info i {
     font-size: 2rem;
     margin-bottom: 10px;
     color: var(--celeste);
 }
 
 footer .copyright{
+    width: 100%;
     margin-right: auto;
     text-align: left;
     color: #555;
